--- a/Listas/Estilos/Estilos.css
+++ b/Listas/Estilos/Estilos.css
@@ -4,9 +4,39 @@ body{
 li{
     color: aquamarine;
 }
+li.L0{
+    box-sizing: content-box;
+    width: 5%;
+    color: green;
+    background-color: yellow;
+}
 li.L1{
     box-sizing: content-box;
-    width: 10%;
+    width: 9.5%;
     color: red;
     background-color: black;
+}
+li.L2{
+    box-sizing: content-box;
+    width: 9.5%;
+    color: brown;
+    background-color: chocolate;
+}
+li.L3{
+    box-sizing:content-box;
+    width: 6%;
+    color: RED;
+    background-color: white;
+}
+li.L4{
+    box-sizing: content-box;
+    width: 11%;
+    color: brown;
+    background-color: pink;
+}
+li.L5{
+    box-sizing: content-box;
+    width: 7%;
+    color: Yellow;
+    background-color: green;
 }
