--- a/Texto en Línea/Estilos/Estilos.css
+++ b/Texto en Línea/Estilos/Estilos.css
@@ -7,3 +7,25 @@ mark{
 i{
     color: aquamarine;
 }
+p.p1{
+    background-color: red;
+    width: 10%;
+}
+p.p2{
+    background-color: yellow;
+    width: 10%;
+}
+p.p3{
+    background-color: red;
+    width: 10%;
+}
+p[class="p1 p3"]{
+    text-transform: uppercase;
+}
+
+a:link{
+    color: blue;
+}
+a:visited{
+    color: darkgreen;
+}
