--- a/COLUMNAS 2/css/estilos.css
+++ b/COLUMNAS 2/css/estilos.css
@@ -16,7 +16,7 @@
   column-gap: 40px;
   -webkit-column-rule: 5px solid red;
   column-rule: 5px solid red;
-  height: 400px; /* Si la quito no funciona el break inside +/
+  height: 400px; /* Si la quito no funciona el break inside */
 }
 
 .border p {
