--- a/COLUMNAAAAASS/style.css
+++ b/COLUMNAAAAASS/style.css
@@ -4,41 +4,64 @@ header{
     text-align: justify;
     margin: 3%;
 }
-header>h1{
-    padding-top: 40%;
-    padding-left: 25%;
-    color: darkviolet;
-    font-family: monospace;
+nav{
+    height: 1.8em;
+    left: 0%;
+    position: fixed;
+    top: 0%;
+    width: 100%;
+}
+nav>ul{
+    list-style-type: none;
+    margin: 0.2em;
+}
+nav>li{
+    border: blue 2px solid;
+    float: left;
+    margin-right: 0.6em;
+}
+nav>a{
+    padding: 0 0.3em;
+    text-decoration: none;
 }
 .logo{
-    width: 125%;
-    height: 125%;
+    width: 5%;
+    height: 10%;
+    position: absolute;
+    top: 5%;
+    right: 60%;
+}
+.titulo{
+    width: 5%;
+    height: 10%;
+    position: absolute;
+    top: 3%;
+    right: 60%; 
 }
 ul{
     list-style-type:disc;
 }
 li{
-    margin-bottom: 150%;
+    margin-bottom: auto;
     text-transform: uppercase;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 p{
-    column-count: 2;
     column-gap: 50px;
     text-align: justify;
 }
-nav{
-    width: 10%;
-    margin: 10px;  
-    padding-top: 25%;
-    padding-bottom: 35%;     
-    padding-right: 20%;
-}
 main{
-    text-align: justify;
-    padding-left: 25%;
-    box-sizing:border-box;
-    border: blue 25px solid;
+position: absolute;
+height: 70%;
+left: 25%;
+top: 30%;
+width: 70%;
+overflow: hidden;
+}
+footer{
+    position: absolute;
+    bottom: 0%;
+    top: 50%;
 }
 
 
