--- a/Actividades/Position.css
+++ b/Actividades/Position.css
@@ -1,28 +1,40 @@
-nav>.nav-item{
-    background-color:grey ;
-    display: inline-block;
-}
-.fixed-sidebar{
-    height: 50%;
-    position:absolute;
-    top: 36%;
-    width: 7%;
-    height: 25%;
-    left: 5%;
-    box-sizing: border-box;
-    border: 10px grey solid;
+*{
+    background-color: lightgrey;
     box-sizing: content-box;
-    content: 50px grey solid;
 }
 .fixed-sidebar>img{
-    width: 100%;
-    height: 35%;
-    position: relative;
-    left: 60%;
+    width: 80px;
+    height: 80px;
 }
-.fixed-sidebar>ul>li{
-    background-color: grey;
-    list-style: none;
+.fixed-sidebar{
+    border: 5px black solid;
+    width: 80px;
+    height: 350px;
+    padding: 2px;
+    position: fixed;
+    top: 250px;
+    left: 5px;
+}
+.fixed-sidebar ul{
+    list-style-type: none;
+    padding-left: 1%;
     text-align: center;
-    width: 300%;
+}
+.container{
+    border: 1px black solid;
+    width: 90%;
+    height: 700px;
+    margin: 20px auto;
+    background-color: aquamarine;
+}
+nav{
+    background-color: grey;
+    padding: 5px;
+
+}
+.nav-item{
+    padding-right: 300px;
+    background-color: grey;   
+    display: inline-block;
+    color: white;
 }
