--- a/Actividades/Position.css
+++ b/Actividades/Position.css
@@ -5,6 +5,7 @@
 .fixed-sidebar>img{
     width: 80px;
     height: 80px;
+    border-top-right-radius: 20px;
 }
 .fixed-sidebar{
     border: 5px black solid;
@@ -14,6 +15,8 @@
     position: fixed;
     top: 250px;
     left: 5px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 .fixed-sidebar ul{
     list-style-type: none;
@@ -30,9 +33,10 @@
 nav{
     background-color: grey;
     padding: 5px;
-
+    position: sticky;
 }
 .nav-item{
+    padding-left: 5%;
     padding-right: 300px;
     background-color: grey;   
     display: inline-block;
