--- a/Actividades/Position.css
+++ b/Actividades/Position.css
@@ -1,44 +1,108 @@
-*{
+* {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  body {
     background-color: lightgrey;
-    box-sizing: content-box;
-}
-.fixed-sidebar>img{
-    width: 80px;
-    height: 80px;
-    border-top-right-radius: 20px;
-}
-.fixed-sidebar{
-    border: 5px black solid;
-    width: 80px;
-    height: 350px;
-    padding: 2px;
-    position: fixed;
-    top: 250px;
-    left: 5px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-.fixed-sidebar ul{
-    list-style-type: none;
-    padding-left: 1%;
-    text-align: center;
-}
-.container{
-    border: 1px black solid;
-    width: 90%;
-    height: 700px;
-    margin: 20px auto;
-    background-color: aquamarine;
-}
-nav{
-    background-color: grey;
-    padding: 5px;
+  }
+  
+  .container {
+    background-color: lightgreen;
+    border-radius: 10px;
+    margin: 100px auto;
+    position: relative;
+    height: 600px;
+    width: 80%;
+  }
+  
+  .container nav {
+    background-color: #555555;
+    position: -webkit-sticky;
     position: sticky;
-}
-.nav-item{
-    padding-left: 5%;
-    padding-right: 300px;
-    background-color: grey;   
+    top: 0px;
+    z-index: 100;
+  }
+  
+  .container nav div {
+    color: #ffffff;
     display: inline-block;
-    color: white;
-}
+    padding: 20px;
+    width: 20%;
+  }
+  
+  figure {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    width: 25%;
+  }
+  
+  figure img {
+    width: 90%;
+  }
+  
+  figure:hover {
+    z-index: 20;
+  }
+  
+  #li1 {
+    left: 20%;
+    position: absolute;
+    top: 25%;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    z-index: 10;
+  }
+  
+  #li2 {
+    left: 30%;
+    position: absolute;
+    top: 30%;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: 6;
+  }
+  
+  #li3 {
+    left: 40%;
+    position: absolute;
+    top: 35%;
+    -webkit-transform: rotate(-15deg);
+    transform: rotate(-15deg);
+    z-index: 4;
+  }
+  
+  #li4 {
+    left: 50%;
+    position: absolute;
+    top: 40%;
+    -webkit-transform: rotate(15deg);
+    transform: rotate(15deg);
+    z-index: 2;
+  }
+  
+  .fixed-sidebar {
+    border: 2px solid black;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-size: 0.8em;
+    height: 40%;
+    position: fixed;
+    text-align: center;
+    top: 30%;
+    width: 80px;
+  }
+  
+  .fixed-sidebar ul {
+    list-style: none;
+    padding-left: 5px;
+  }
+  
+  .fixed-sidebar img {
+    margin: 5%;
+    width: 90%;
+  }
+  
