--- a/CV/CV.css
+++ b/CV/CV.css
@@ -17,6 +17,11 @@ header {
   padding: 20px 0;
 }
 
+table th{
+  border-bottom: 2px rgb(39, 173, 214) solid;
+  border-top: 2px rgb(39, 173, 214) solid;
+}
+
 .logo img {
   max-width: 100%;
   height: 80px;
@@ -69,11 +74,6 @@ nav a:hover {
 
 h2, h3 {
   color: #3498db;
-}
-
-h2.Con {
-  border-top: 2px solid rgb(39, 173, 214);
-  border-bottom: 2px solid rgb(39, 173, 214); /*Si pones 2px luego solid y luego el color te pondrá una línea justo debajo*/
   padding-bottom: 5px;
   margin-top: 20px;
 }
