--- a/Formulario/formulario.css
+++ b/Formulario/formulario.css
@@ -143,3 +143,8 @@ input[type="submit"]:hover,
 input[type="reset"]:hover {
   background-color: #2980b9;
 }
+
+input[type="radio"],
+input[type="checkbox"]{
+  width: 4%;
+}
