--- a/Formulario/formulario.css
+++ b/Formulario/formulario.css
@@ -68,6 +68,7 @@ footer {
   background-color: #3498db;
   margin-top: 10px;
   color: white;
+  text-align: center;
 }
 /* Estilos para distintas clases*/
 .footer {
