--- a/Sobre_el_proyecto/Sobre_el_proyecto.css
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.css
@@ -23,6 +23,16 @@ header {
   text-align: center;
 }
 
+.section img{
+  padding-top: 30px;
+  width: 800px;
+}
+
+.section video{
+  padding-top: 30px;
+  width: 800px;
+}
+
 .logo img {
   max-width: 100%;
   height: 80px;
